--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vuepress build"
   },
   "dependencies": {
-    "chart.js": "^2.8.0"
+    "chart.js": "^2.8.0",
+    "vudio.js": "^1.0.3"
   }
 }
