--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "chart.js": "^2.8.0",
-    "vudio.js": "git+https://github.com/alex2wong/vudio.js.git"
+    "vudio": "^2.0.5",
+    "vudio.js": "git+https://github.com/alex2wong/vudio.js.git",
+    "vue-concise-slider": "^3.4.3"
   }
 }
